--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
 	},
 	"dependencies": {
 		"@sveltekit-i18n/base": "^1.3.7",
-		"@sveltekit-i18n/parser-icu": "^1.0.8"
+		"@sveltekit-i18n/parser-icu": "^1.0.8",
+		"@radroots/theme": "workspace:*"
 	},
 	"publishConfig": {
 		"access": "public"
