--- a/package.json
+++ b/package.json
@@ -41,10 +41,13 @@
 		"vite": "^5.0.11"
 	},
 	"dependencies": {
-		"@sveltekit-i18n/base": "^1.3.7",
-		"@sveltekit-i18n/parser-icu": "^1.0.8",
+		"@nostr-dev-kit/ndk": "^2.10.0",
+		"@nostr-dev-kit/ndk-cache-dexie": "^2.5.1",
+		"@nostr-dev-kit/ndk-svelte": "^2.2.18",
 		"@radroots/sveltekit-search-params": "workspace:*",
-		"@radroots/theme": "workspace:*"
+		"@radroots/theme": "workspace:*",
+		"@sveltekit-i18n/base": "^1.3.7",
+		"@sveltekit-i18n/parser-icu": "^1.0.8"
 	},
 	"publishConfig": {
 		"access": "public"
