--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"devDependencies": {
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/package": "^2.0.0",
+		"@types/luxon": "^3.4.2",
 		"publint": "^0.1.9",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
@@ -41,13 +42,13 @@
 		"vite": "^5.0.11"
 	},
 	"dependencies": {
-		"@nostr-dev-kit/ndk": "^2.10.0",
-		"@nostr-dev-kit/ndk-cache-dexie": "^2.5.1",
-		"@nostr-dev-kit/ndk-svelte": "^2.2.18",
+		"@nostr-dev-kit/ndk": "^2.7.1",
+		"@nostr-dev-kit/ndk-cache-dexie": "^2.3.1",
 		"@radroots/sveltekit-search-params": "workspace:*",
 		"@radroots/theme": "workspace:*",
 		"@sveltekit-i18n/base": "^1.3.7",
-		"@sveltekit-i18n/parser-icu": "^1.0.8"
+		"@sveltekit-i18n/parser-icu": "^1.0.8",
+		"luxon": "^3.5.0"
 	},
 	"publishConfig": {
 		"access": "public"
