--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"peerDependencies": {
-		"svelte": "^5.0.0-next.1"
+		"svelte": "^4.2.19"
 	},
 	"devDependencies": {
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/package": "^2.0.0",
 		"@types/luxon": "^3.4.2",
 		"publint": "^0.1.9",
-		"svelte": "^5.0.0-next.1",
-		"svelte-check": "^3.6.0",
+		"svelte": "^4.2.19",
+		"svelte-check": "^3.8.6",
 		"svelte-preprocess": "^5.1.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.3.3",
@@ -44,6 +44,8 @@
 	"dependencies": {
 		"@nostr-dev-kit/ndk": "^2.7.1",
 		"@nostr-dev-kit/ndk-cache-dexie": "^2.3.1",
+		"@nostr-dev-kit/ndk-svelte": "^2.2.18",
+		"@radroots/sveltekit-i18n": "workspace:*",
 		"@radroots/sveltekit-search-params": "workspace:*",
 		"@radroots/theme": "workspace:*",
 		"@sveltekit-i18n/base": "^1.3.7",
