--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"peerDependencies": {
+		"@sveltejs/kit": "^2.0.0",
 		"svelte": "^4.2.19"
 	},
 	"devDependencies": {
